--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@ body {
   margin: 0;
 }
 
+.red {
+  color: #f00;
+}
+
 span[class*="ipa-char-/"] {
   font-family: Arial, sans-serif;
 }
@@ -244,7 +248,7 @@ input.ipa-input:focus~label:before {
 .flip-card {
   background-color: transparent;
   width: 100%;
-  height: calc(100vh - 280px);
+  height: calc(100vh - 335px);
   perspective: 1000px;
   margin: 0 auto;
   position: relative;
@@ -448,7 +452,7 @@ input.ipa-input:focus~label:before {
   left: -50%;
   width: 100vw;
   background: #eee;
-  height: 100vh;
+  height: calc(100vh - 50px);
   margin-top: -15px;
   transition: all 300ms;
   z-index: 2;
@@ -502,4 +506,93 @@ input.ipa-input:focus~label:before {
 
 .menu--active .material-design-hamburger__icon span + span {
   display: flex;
+}
+
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  border-bottom: 1px solid #4dcb6d;
+  background-color: #f1f1f1;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inherit;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  display: block;
+  font-size: 16px;
+  padding: 14px 16px;
+  transition: 0.3s;
+  width: 50%;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #4dcb6d;
+  color: #fff;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 0;
+}
+
+.tabcontent ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.tabcontent li + li {
+  border-top: 1px solid #b2b5b7;
+}
+
+/* accordion */
+.accordion-toggle {
+  display: block;
+  background-color: #fff;
+  color: #444;
+  cursor: pointer;
+  padding: 15px 50px 15px 15px;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+  text-decoration: none;
+}
+
+.done::after {
+  content: "\2714";
+  text-indent: 22px;
+  color: #4dcb6d;
+  position: absolute;
+  right: 15px;
+}
+
+.accordion-content {
+  display: none;
+  padding: 15px;
+}
+
+.accordion-content.active {
+  background: #eee;
+  border-top: 1px solid #b2b5b7;
+  display: block;
+}
+
+.accordion-content ol li {
+  border: none;
+  padding: 5px 0;
+  text-decoration: none;
 }
