--- a/css/style.css
+++ b/css/style.css
@@ -453,7 +453,7 @@ input.ipa-input:focus~label:before {
   top: 50px;
   width: 100vw;
   background: #eee;
-  height: calc(100vh - 50px);
+  height: 100%;
   transition: all 300ms;
   z-index: 2;
   overflow-y: scroll;
