--- a/css/style.css
+++ b/css/style.css
@@ -453,7 +453,7 @@ input.ipa-input:focus~label:before {
   top: 50px;
   width: 100vw;
   background: #eee;
-  height: 100%;
+  height: calc(100vh + 15px);
   transition: all 300ms;
   z-index: 2;
   overflow-y: scroll;
@@ -526,6 +526,7 @@ input.ipa-input:focus~label:before {
   cursor: pointer;
   display: block;
   font-size: 16px;
+  margin: 0;
   padding: 14px 16px;
   transition: 0.3s;
   width: 50%;
